--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -251,7 +251,7 @@
             <!-- /input-group -->
           </li>
           <li>
-            <a href="index.html">
+            <a [routerLink]="['/']">
               <i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
           </li>
           <li>
@@ -270,7 +270,7 @@
             <!-- /.nav-second-level -->
           </li>
           <li>
-            <a href="tables.html">
+            <a [routerLink]="['/', 'tables']">
               <i class="fa fa-table fa-fw"></i> Tables</a>
           </li>
           <li>
@@ -666,7 +666,8 @@
                   <div class="timeline-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus numquam facilis enim eaque, tenetur
                       nam id qui vel velit similique nihil iure molestias aliquam, voluptatem totam quaerat, magni commodi
-                      quisquam.</p>
+                      quisquam.
+                    </p>
                   </div>
                 </div>
               </li>
@@ -693,7 +694,8 @@
                   <div class="timeline-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis minus modi quam ipsum alias at est molestiae
                       excepturi delectus nesciunt, quibusdam debitis amet, beatae consequuntur impedit nulla qui! Laborum,
-                      atque.</p>
+                      atque.
+                    </p>
                     <hr>
                     <div class="btn-group">
                       <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
@@ -727,7 +729,8 @@
                   <div class="timeline-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi fuga odio quibusdam. Iure expedita, incidunt
                       unde quis nam! Quod, quisquam. Officia quam qui adipisci quas consequuntur nostrum sequi. Consequuntur,
-                      commodi.</p>
+                      commodi.
+                    </p>
                   </div>
                 </div>
               </li>
