--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="pageHeader" class="row" #pageHeader>
   <div class="col-lg-12">
     <h1 class="page-header">Dashboard</h1>
   </div>
