練習 redirectTo 與萬用路由使用 (**)

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -251,7 +251,7 @@
             <!-- /input-group -->
           </li>
           <li>
-            <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <a [routerLink]="['/dashboard']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
               <i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
           </li>
           <li>
