--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div id="pageHeader" class="row" #pageHeader>
   <div class="col-lg-12">
     <h1 class="page-header">Dashboard</h1>
+    <app-demo></app-demo>
   </div>
   <!-- /.col-lg-12 -->
 </div>
@@ -284,7 +285,8 @@
               <div class="timeline-body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolorem quibusdam, tenetur commodi provident
                   cumque magni voluptatem libero, quis rerum. Fugiat esse debitis optio, tempore. Animi officiis alias, officia
-                  repellendus.</p>
+                  repellendus.
+                </p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maiores odit qui est tempora eos, nostrum
                   provident explicabo dignissimos debitis vel! Adipisci eius voluptates, ad aut recusandae minus eaque facere.</p>
               </div>
