--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">Tables</h1>
+    <app-demo></app-demo>
   </div>
   <!-- /.col-lg-12 -->
 </div>
