--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div id="pageHeader" class="row" #pageHeader>
   <div class="col-lg-12">
     <h1 class="page-header">Dashboard</h1>
+    <a [routerLink]="['/', 'dashboard', 'page1']">Page1</a>
+    <a [routerLink]="['/dashboard/page2']">Page2</a>
     <app-demo></app-demo>
   </div>
   <!-- /.col-lg-12 -->
